...
            "value" : "Add a podcast"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Adicionar um podcast"
          }
        }
      }
    },
    "Artwork will be downloaded again as you browse." : {
      "extractionState" : "manual",
...
            "value" : "Browse"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Explorar"
          }
        }
      }
    },
    "Cache" : {
      "extractionState" : "manual",
...
            "value" : "Images"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imagens"
          }
        }
      }
    },
    "Jovem Nerd · Português" : {
      "extractionState" : "manual",
...
            "value" : "Recent addresses"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Endereços recentes"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
...
            "value" : "That doesn't look like a valid address"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Esse endereço não parece válido"
          }
        }
      }
    },
    "That isn't a podcast feed" : {
      "extractionState" : "manual",
...
            "value" : "Try one of these"
          }
        },
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Experimente um destes"
          }
        }
      }
    },
    "unknown length" : {
      "extractionState" : "manual",
...
